Changed the objective line

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div>
-        <p>Self-Motivated Learner | Workaholic | HardCore PC Gamer</p><br>
+        <p>Self-Motivated Learner | Dedicated |Hard Working | HardCore PC Gamer</p><br>
         <p>
           <a href=""></a>
         </p>
